checkout table jump bug

--- a/src/scss/components/tables/_tables.scss
+++ b/src/scss/components/tables/_tables.scss
@@ -2,7 +2,7 @@
   display: grid;
   position: relative;
   grid-template-columns: 1fr auto;
-  height: 300px;
+  // height: 300px;
 }
 
 .table--scroll-x,
